<package>
  <name>steam_controlle</name>
  <version>0.0.1</version>
  <license>BSD</license>

  <description>
    ROS Driver for Valve's Steam Controller.
  </description>

  <maintainer email="cbuscaron@gmail.com">Camilo F. Buscaron</maintainer>
  <author>Camilo F. Buscaron</author>


  <url type="website">http://www.ros.org/wiki/steam_controlle</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>joystick</build_depend>
  <build_depend>bluez</build_depend>
  <build_depend>python-bluez</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>libusb-dev</run_depend>
  <run_depend>joystick</run_depend>
  <run_depend>bluez</run_depend>
  <run_depend>python-bluez</run_depend>
</package>
